--- a/src/app/menus/header/header.component.html
+++ b/src/app/menus/header/header.component.html
@@ -3,7 +3,7 @@
 <section>
   <div class="container">
     <div class="header">
-      <a href="http://localhost:4200/" class="left">❤️ Shreya Pawar</a>
+      <a href=" " class="left">❤️ Shreya Pawar</a>
       <div class="right">
         <a href="/project">Project</a>
         <a href="/resume">Resume</a>
