added changes resume

--- a/src/app/menus/about/about.component.html
+++ b/src/app/menus/about/about.component.html
@@ -1,7 +1,7 @@
 
 <br><br><br><br><br><br><br><br><br><div class="about-section" >
 
-<h3 style="color: #4a4a4a;">Passionate website developer with over 6 months of experience in WordPress theme customization and creating interactive websites. Proficient in HTML, CSS, JavaScript, and custom WordPress themes, with 1.4 years of experience in Angular development. Skilled in resolving validation errors, optimizing web performance, and facilitating seamless API communication using Postman. Enthusiastic about leveraging my background in ENTC engineering and web development expertise to deliver high-quality WordPress and Angular solutions.</h3>
+<h3 style="color: #4a4a4a;">I'm a passionate website developer with nearly 2 years of experience in customizing WordPress themes and building interactive websites. I have strong skills in Angular development, fixing validation errors, improving web performance, and using Postman for smooth API communication. I'm dedicated to delivering high-quality WordPress and Angular solutions by applying both technical expertise and creative problem-solving.</h3>
 <h2 style=" color: #00a1a7;">My Skills</h2>
 <ul>
   <li>Frontend Development</li>
@@ -9,8 +9,9 @@
   <li>Wordpress</li>
 </ul>
 <h2 style=" color: #00a1a7;">My Experience</h2>
-<p>Maximize Market Research  2023-2024</p>
+<p>Maximize Market Research PVT LTD    2023-2024</p>
+<p>Infotel India PVT LTD                2022-2023</p>
 
 <h2 style=" color: #00a1a7;">Get in Touch</h2>
-<p>shreyapawar0802@gmail.com</p>
+<p>shreyapawar0898@gmail.com</p>
 </div>
