--- a/src/app/menus/resume/resume.component.html
+++ b/src/app/menus/resume/resume.component.html
@@ -1,12 +1,12 @@
 <br><br><br>
 <div class="resume-container">
     <div>
-        <button><a href="https://drive.google.com/file/d/1QxWYSjZ8osjCZAGQ_WOK1lmg0JSXp6e_/view?usp=sharing" target="_blank" download>Download Resume</a></button>
+        <button><a href="https://drive.google.com/file/d/1kfpaB6kb4EbzokW-OmsyHwYwLkvfoSDA/view?usp=sharing" target="_blank" download>Download Resume</a></button>
     </div>
     
     <header>
         <h1>Shreya Pawar</h1>
-        <p>Email: <a href="mailto:shreyapawar0802@gmail.com">shreyapawar0802@gmail.com</a> | Phone: +91-9172402719</p>
+        <p>Email: <a href="mailto:shreyapawar0898@gmail.com">shreyapawar0898@gmail.com</a> | Phone: +91-9172402719</p>
         <p>Address: Pune, Maharashtra</p>
     </header>
 
@@ -19,7 +19,7 @@
 
     <section>
         <h2>Professional Experience</h2>
-        <h3>Website Developer - Maximize Market Research, Pune</h3>
+        <h3 style="color:000;">Website Developer - Maximize Market Research, Pune</h3>
         <p><em>Dec 2023 - Present</em></p>
         <ul>
             <li>Developed and maintained custom WordPress themes and plugins to meet client specifications, supporting daily and weekly report publications.</li>
@@ -31,7 +31,7 @@
             <li>Conducted thorough testing and debugging to ensure website stability and performance across different browsers and devices.</li>
         </ul>
 
-        <h3>Angular Developer - Infotel India PVT LTD, Bangalore</h3>
+        <h3 style="color:000;">Angular Developer - Infotel India PVT LTD, Bangalore</h3>
         <p><em>Dec 2022 - 2023</em></p>
         <ul>
             <li>Developed a web-based Customer Requirement Management Software and a Hotel Management software to handle customer needs online, focusing on designing, creating, and refining features for smoother customer processes.</li>
