--- a/src/app/menus/resume/resume.component.html
+++ b/src/app/menus/resume/resume.component.html
@@ -19,7 +19,7 @@
 
     <section>
         <h2>Professional Experience</h2>
-        <h3 style="color:000;">Website Developer - Maximize Market Research, Pune</h3>
+        <h2>Website Developer - Maximize Market Research, Pune</h2>
         <p><em>Dec 2023 - Present</em></p>
         <ul>
             <li>Developed and maintained custom WordPress themes and plugins to meet client specifications, supporting daily and weekly report publications.</li>
@@ -31,7 +31,7 @@
             <li>Conducted thorough testing and debugging to ensure website stability and performance across different browsers and devices.</li>
         </ul>
 
-        <h3 style="color:000;">Angular Developer - Infotel India PVT LTD, Bangalore</h3>
+        <h2>Angular Developer - Infotel India PVT LTD, Bangalore</h2>
         <p><em>Dec 2022 - 2023</em></p>
         <ul>
             <li>Developed a web-based Customer Requirement Management Software and a Hotel Management software to handle customer needs online, focusing on designing, creating, and refining features for smoother customer processes.</li>
