--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
         <div class="intro1">
           <img src="\assets\shreyapawar-pic.png" alt=""width="300px" height="300px" style="border-radius: 50%;" >
           <h1>Who's this?</h1>
-          <p style="font-size: 19px;color: rgb(110, 111, 111);"> I'm Shreya ,Over the past 1.8 years, <br>
+          <p style="font-size: 19px;color: rgb(110, 111, 111);"> I'm Shreya ,Over the past almost 2 years, <br>
              I have worked as an Angular developer and website developer,<br>
               collaborating with both established companies and  clients <br>
               to meet their specific requirements.</p> <br><br><br>
