--- a/src/app/menus/resume/resume.component.html
+++ b/src/app/menus/resume/resume.component.html
@@ -20,7 +20,7 @@
     <section>
         <h2>Professional Experience</h2>
         <h2>Website Developer - Maximize Market Research, Pune</h2>
-        <p><em>Dec 2023 - Present</em></p>
+        <p><em>Dec 2023 - June 2024</em></p>
         <ul>
             <li>Developed and maintained custom WordPress themes and plugins to meet client specifications, supporting daily and weekly report publications.</li>
             <li>Implemented responsive design techniques to ensure the website was mobile-friendly and optimized for various devices.</li>
@@ -32,7 +32,7 @@
         </ul>
 
         <h2>Angular Developer - Infotel India PVT LTD, Bangalore</h2>
-        <p><em>Dec 2022 - 2023</em></p>
+        <p><em>Aug 2022 - Nov 2023</em></p>
         <ul>
             <li>Developed a web-based Customer Requirement Management Software and a Hotel Management software to handle customer needs online, focusing on designing, creating, and refining features for smoother customer processes.</li>
             <li>Built an e-commerce website to address customer requirements, emphasizing feature enhancement and user experience refinement</li>
